# turbol

./: .gitignore  .sbtopts  .scalafmt.conf  build.sbt  pyproject.toml  readme.md  run.env  scalastyle-config.xml  update-sbtw.sh
.github/workflows/: scala.yml
backend/var/conf/: install.yml  run.env  (+2 more)
deployment/: .gitignore  pyproject.toml  secrets.auto.tfvars
deployment/digital-ocean/: .gitignore  README  import-vault-mounts.sh  infra-readme.md  install-infra.sh  main.tf  staging-db-ca.crt  sync-state.sh  variables.tf  versions.tf
deployment/local/: .gitignore  cleanup.sh  constants.py  dev-env.py  import-vault-mounts.sh  install_utils.py  k8s_utils.py  main.tf  readme.md  secrets.yml  utils.py  variables.tf
frontend/: .gitignore  Caddyfile  Dockerfile  build-docker.sh  caddy.conf  compile-and-build-docker.sh  docker-build-and-push.sh  docker-push.sh  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.vue  main.ts
grib/: .gitignore  download_gtg.py  get-flight-data.py  grib2_wgrib2.ppt  pyproject.toml  test.ipynb
grib/docker/: Dockerfile
grib/postgres/: Dockerfile
project/: dependencies.scala  plugins.sbt
scripts/: .gitignore  docker-publish-to-local-registry.sh
scripts/flight-data/: download_gtg.py
scripts/kube/: enable-postgres-vault.sh  fix-token-insufficient-perms.sh  get-kube-token.sh  install-dashboard.sh  install-linkerd.sh  k8s-jprofiler-attach.sh  kube-grafana.sh  kube-prometheus.sh  kubeapps.sh  kubetoken.sh  open-remote-dashboard.sh  open-remote-vault.sh  readme.md  setup-helm-rbacs.sh  start-kube-ui.sh
(+204 files in other folders)
